@@ -408,9 +408,10 @@ public class PropertyChangeSupport implements Serializable
   public void fireIndexedPropertyChange(String name, int index,
                                         Object oldValue, Object newValue)
   {
-      // Argument checking is done in firePropertyChange(PropertyChangeEvent) .
-      firePropertyChange(new IndexedPropertyChangeEvent(source, name,
-                                                        oldValue, newValue,
+    // Argument checking is done in firePropertyChange(PropertyChangeEvent) .
+    firePropertyChange(new IndexedPropertyChangeEvent(source, name,
+                                                      oldValue, newValue,
+                                                      index));
   }
 
   /**
